# rust-axum-scylla

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml  rust.yml
doc/: architecture.plantuml  classdiagram.plantuml
src/: app.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  response.rs  result.rs  router.rs  state.rs  vehicle.rs
src/db/: mod.rs  queries.rs  scylla_errors.rs  scylla_queries.rs
src/db/scylla/: mod.rs  queries.rs  vehicle_queries.rs
src/handlers/: mod.rs  vehicle_handlers.rs
src/routing/: mod.rs  vehicle_handlers.rs
tests/: mock_queries.rs  test.rs  test_mocked_queries.rs
tests/support/: mocked_queries.rs  mod.rs  test_queries.rs
