[package]
name = "hello"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
async-oncecell = "0.2.0"
async-trait = "0.1.51"
argh = "0.1.5"
axum = "0.2.0"
scylla = "0.2.1"
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.66"
struct_field_names = "0.2.1"
strum = "0.21.0"
strum_macros = "0.21.1"
thiserror = "1.0.26"
tokio = { version = "1.10.0", features = ["full"] }
tower = { version = "0.4.8", features = ["timeout"] }
tower-http = { version = "0.1.1", features = ["trace"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
uuid = { version = "0.8.2", features = ["serde"] }