[package]
name = "hello"
version = "0.1.0"
edition = "2018"
autotests = false

[[test]]
name = "integration_with_mocked_queries"
path = "tests/test_mocked_queries.rs"

[dependencies]
anyhow = "1.0"
async-oncecell = "0.2"
async-trait = "0.1"
argh = "0.1"
axum = "0.2"
scylla = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
struct_field_names = "0.2"
strum = "0.21"
strum_macros = "0.21"
thiserror = "1.0"
tokio = { version = "1.10", features = ["full"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }